# bazel-to-maven-build

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  maven_install.json
src/main/java/com/canva/pomgen/: AbstractParsedTarget.java  BazelInfo.java  BazelLabel.java  DepType.java  ImportExternalJar.java  JavaCompile.java  JsonTargetInfo.java  Main.java  Maps.java  MavenArtifact.java  MavenCompilerConfig.java  MavenCoordinate.java  MavenModule.java  MavenPomDependency.java  Scope.java  SourcePath.java  SourceRoot.java  Triple.java  XmlGenerator.java
src/main/resources/com/canva/pomgen/: maven_pom.bzl
