module(name = "bazel-to-maven-build")

bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "bazel_to_maven_build_maven_deps",
    artifacts = [
        "com.fasterxml.jackson.core:jackson-core:2.17.1",
        "com.fasterxml.jackson.core:jackson-databind:2.17.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.17.1",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "bazel_to_maven_build_maven_deps",
    "unpinned_bazel_to_maven_build_maven_deps",
)

